--- a/nlw-setup/style.css
+++ b/nlw-setup/style.css
@@ -15,7 +15,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 48px;
+    position: fixed;
+    width: fit-content;
   }
+  
   button{
     padding: 16px 24px;
     border-radius: 8px;
@@ -32,6 +35,47 @@
     line-height: 125%;
   }
 
+  #form-habits{
+    display: flex;
+    padding: 182px 48px 48px;
+  }
+
+  .habits {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .habit {
+    width: 64px;
+    height: 64px;
+    font-size: 32px;
+    display: flex;
+    align-items: center;
+  }
+
+  .days{
+    display: flex;
+    margin-left: 32px;
+    gap: 48px;
+
+  }
+
+  .day{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .day div{
+    margin-bottom: 8px;
+    font-family: 'Roboto Mono';
+    font-size: 20px;
+    line-height: 125%;
+    color: #A1A1AA;
+    text-align: center;
+
+  }
   input{
     appearance: none;
     -webkit-appearance: none;
@@ -45,5 +89,13 @@
   }
 
   input:checked{
+    background: #8b5cf6;
+    border: 2px solid #A78BFA;
+  }
+
+  @media (max-width: 570px) {
+    button div {
+      display: none;
+    }
     
   }
