--- a/nlw-setup/style.css
+++ b/nlw-setup/style.css
@@ -1,7 +1,10 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* text-decoration: none; */
+    list-style: none;
   }
   
   body {
@@ -16,7 +19,7 @@
     justify-content: space-between;
     padding: 48px;
     position: fixed;
-    width: fit-content;
+    width: 100%;
   }
   
   button{
@@ -37,7 +40,7 @@
 
   #form-habits{
     display: flex;
-    padding: 182px 48px 48px;
+    padding: 182px 48px;
   }
 
   .habits {
@@ -93,6 +96,45 @@
     border: 2px solid #A78BFA;
   }
 
+  footer{
+    width: 100;
+    height: 7rem;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-content p{
+  font-family: var(--font-secundary);
+  color: #a7a7a7;
+  font-size: 1.2rem;
+}
+
+.social-list a{
+  margin: 0 2rem;
+  color: #a7a7a7;
+  font-size: 1.3rem;
+}
+
+.social-list ul{
+  display: flex;
+}
+
+@media screen and (min-width: 200px) and
+(max-width: 768px) {
+    html{
+        font-size: 65%;
+    }
+    #form-habits{
+      padding: 200px 28px;
+    }
+  }
   @media (max-width: 570px) {
     button div {
       display: none;
