--- a/nlw-setup/style.css
+++ b/nlw-setup/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* text-decoration: none; */
     list-style: none;
   }
   
@@ -40,7 +39,8 @@
 
   #form-habits{
     display: flex;
-    padding: 182px 48px;
+    padding: 4vw 2.5vw;
+    margin-bottom: -3.9vw;
   }
 
   .habits {
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    margin-top: 8.5vw;
   }
   .habit {
     width: 64px;
@@ -61,6 +62,7 @@
     display: flex;
     margin-left: 32px;
     gap: 48px;
+    margin-top: 5vw;
 
   }
 
@@ -98,11 +100,13 @@
 
   footer{
     width: 100;
-    height: 7rem;
+    height: 1rem;
     background-color: #272727;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5%;
+    margin-top: 6vw;
 }
 
 .footer-content{
@@ -129,10 +133,13 @@
 @media screen and (min-width: 200px) and
 (max-width: 768px) {
     html{
-        font-size: 65%;
+        font-size: 2.5vw;
     }
     #form-habits{
       padding: 200px 28px;
+    }
+    footer{
+      padding: 10vw;
     }
   }
   @media (max-width: 570px) {
