:white_check_mark: add display grid

--- a/botoes-cursores/style.css
+++ b/botoes-cursores/style.css
@@ -34,6 +34,13 @@ body{
     height: 100vh;
     place-content: center;
     gap: 16px;
+
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto 10vh auto;
+    grid-gap: 32px;
+    padding: 32px;
+    
 }
 /* ======= Botão Primário ====== */
 button{
@@ -166,10 +173,6 @@ button.tertiary:disabled {
     cursor: move;
 }
 
-section {
-    column-count: 3;
-    gap: 10px;
-}
 @keyframes spin {
     from {
         transform: rotate(0deg);
