--- a/botoes-cursores/style.css
+++ b/botoes-cursores/style.css
@@ -35,12 +35,45 @@ body{
     place-content: center;
     gap: 16px;
 
-    display: grid;
+    /* display: grid;
+    grid-template-areas:
+    "header header header"
+    "aside main main"
+    "footer footer footer";
     grid-template-columns: auto auto auto;
     grid-template-rows: auto 10vh auto;
     grid-gap: 32px;
-    padding: 32px;
+    padding: 32px; */
     
+}
+
+header{
+    width: 100%;
+    padding: 16px;
+    margin: 79px auto 64px 77px;
+}
+
+/* ======= Title ====== */
+
+.title {
+    font-family: var(--font-primary);
+    color: var(--cor-texto);
+    font-style: normal;
+    margin-bottom: 8px;
+    font-weight: 700;
+    line-height: 32px;
+}
+/* ======= Type button ====== */
+
+/* ======= Section ====== */
+section{
+    width: 100%;
+    margin-bottom: 110px;
+    margin-left: 77px;
+}
+/* ======= Table ====== */
+table{
+    border: 4px solid var(--cor-Frame);
 }
 /* ======= Botão Primário ====== */
 button{
@@ -59,7 +92,7 @@ button{
     display: flex;
     align-items: center;
     gap: 8px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .hover:hover {
@@ -106,7 +139,7 @@ button.secondary{
     display: flex;
     align-items: center;
     gap: 8px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .hoverr:hover {
@@ -149,7 +182,7 @@ button.tertiary{
     display: flex;
     align-items: center;
     gap: 8px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .terciary:hover {
