--- a/botoes-cursores/style.css
+++ b/botoes-cursores/style.css
@@ -11,7 +11,7 @@
 }
 
 :root{
-    --cor-background1: #1E1E1E;
+    --cor-background1: #0B0911;
     --cor-background2: #130F1E;
     --cor-Frame: #1C162C;
     --cor-buttonPrimary: #8257E5;
@@ -65,7 +65,7 @@ header{
     font-weight: 700;
     line-height: 32px;
 }
-/* ======= Type button ====== */
+
 
 /* ======= Section ====== */
 section{
@@ -77,6 +77,39 @@ section{
 table{
     border: 4px solid var(--cor-Frame);
 }
+
+/* ======= Type button ====== */
+
+th{
+    /* padding: 24px 16px; */
+    height: 74px;
+    background: var(--cor-Frame);
+    color: var(--cor-texto);
+    font-family: var(--font-primary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    /* line-height: 13rem; */
+}
+
+td {
+    height: 75px;
+    width: 200px;
+    text-align: center;
+}
+
+#btn-text {
+    font-family: var(--font-primary);
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 0em;
+    text-align: center;
+    padding: 17px;
+    background-color: var(--cor-Frame);
+    color: white;
+}
+
 /* ======= Botão Primário ====== */
 button{
     background-color: var(--cor-buttonPrimary);
@@ -221,12 +254,12 @@ button.tertiary:disabled {
 
 footer{
     display: flex;
-    width: 100vh;
-    height: 8rem;
+    width: 100%;
+    height: 12vh;
     background-color: var(--cor-rodape);
-    display: flex;
     justify-content: center;
     align-items: center;
+ 
 }
 
 .footer-content{
