--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -49,28 +49,12 @@ body{
 }
 
 input {
-    color: fff;
+    border: 0;
+    width: 64px;
+    height: 64px;
 
-    padding: 17px;
-
-    outline: none;
-
-    font-size: 30px;
-    
-
-    font-family: 'Bebas Neue', cursive;
-
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%), #2D2A37;
+    box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01), 0px 7px 7px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.26), 0px 0px 2px rgba(0, 0, 0, 0.29), inset 0px 2px 3px rgba(255, 255, 255, 0.06);
     border-radius: 999px;
 
-    left: calc(50% - 64px/2 - 114px);
-
-    top: calc(50% - 64px/2 - 85px);
-
-
-    box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01), 0px 7px 7px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.26), 0px 0px 2px rgba(0, 0, 0, 0.29), inset 0px 2px 3px rgba(255, 255, 255, 0.06);
-
-}
-
-.btnviolet{
-    background-color: var(--cor-button1);
 }
