--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -18,17 +18,6 @@
      --cor-button2: #462878;
      --cor-fonte:#EBEBEB;
      --cor-textBtn:#975DFA;
-
-    /*
-    --cor-buttonHover:#9674E5;
-    --cor-buttonFocus:#8257E5 #D9CDF7;
-    --cor-button-secondary: #3C3748;
-    --cor-button-secondaryHover:#6A617F;
-    --cor-button-secondaryF: #D9CDF7;
-    --cor-button-secondaryFocus:#FFFFFF;
-    --cor-texto:#fff;
-    --cor-sociallist:#a7a7a7;
-    --cor-rodape:#272727; */
 }
 
 body{
@@ -51,13 +40,78 @@ body{
 }
 
 form{
-    margin-top: 159px;
+    margin-top: 32px;
     margin-inline: 32px;
     display: grid;
     grid-template-columns: repeat(4, auto);
     gap: 12px;
     
 }
+
+.text{
+    width: 160px;
+    height: 26px;
+    border-radius: 15px;
+    letter-spacing: 5px;
+    text-align: center;
+    margin-bottom: 12px;
+
+    margin-top: 54px;
+    padding-inline: 54px;
+    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.display {
+    background: #2d2a37;
+    width: 288px;
+    height: 86px;
+    margin: 54px auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 8px;
+    padding: 0 22px 0 18px;
+    position: relative;
+  }
+  .display::before{
+    content: "=";
+    color: #6b6b6b;
+    position: absolute;
+    top: 40px;
+    left: 0;
+    font-size: 36px;
+  }
+  
+  .display-top {
+    text-align: end;
+    font-size: 20px;
+    line-height: 28px;
+    color: #6b6b6b;
+    width: 95%;
+    overflow:auto;
+  }
+  .display-top::-webkit-scrollbar{
+    height: 2px;
+    background-color: #6b6b6b;
+  }
+  
+  .display-bottom {
+    font-size: 36px;
+    text-align: end;
+    color: #ebebeb;
+    position: relative;
+    width: 95%;
+    padding-left: 34px;
+    overflow-x: auto;
+  }
+  .display-bottom::-webkit-scrollbar{
+    height: 2px;
+    background-color: #ffe;
+  }
 
 input {
     border: 0;
@@ -92,8 +146,3 @@ input {
     box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01), 0px 7px 7px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.26), 0px 0px 2px rgba(0, 0, 0, 0.29), inset 0px 2px 3px rgba(255, 255, 255, 0.1);
 }
 
-#usr{
-    background-image: url(./image/Divide\ \(2\).svg);
-}
-
-#x{}
