--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -1,9 +1,7 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* list-style: none;
-    text-decoration: none; */
 }
 
 :root{
@@ -21,7 +19,7 @@
 }
 
 body{
-    /* width: 100vh; */
+  
     height: 100vh;
     background: linear-gradient(180deg, #807ECE 0%, #8E7ECE 100%);
     
@@ -145,4 +143,139 @@ input {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(255, 255, 255, 0.05) 100%), #7F45E2;
     box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01), 0px 7px 7px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.26), 0px 0px 2px rgba(0, 0, 0, 0.29), inset 0px 2px 3px rgba(255, 255, 255, 0.1);
 }
+ */
 
+ * {
+  box-sizing: border-box;
+  font-size: 60%;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --cor-backgroundCaluculator: #2D2A37;
+  --cor-fonte:#EBEBEB;
+  --cor-fonte2: #6b6b6b;
+  --background-color: linear-gradient(180deg, #807ece 0%, #8e7ece 100%);
+  --cor-btn1: #975dfa;
+  --cor-btn2: linear-gradient(180deg,rgba(0, 0, 0, 0.05) 0.01%,rgba(255, 255, 255, 0.05) 100%),#462878;
+  --box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01),
+    0px 7px 7px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.1),
+    0px 2px 4px rgba(0, 0, 0, 0.26), 0px 0px 2px rgba(0, 0, 0, 0.29),
+    inset 0px 2px 3px rgba(255, 255, 255, 0.06);
+}
+
+body,
+main {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+  place-items: center;
+  background: var(--background-color);
+  font-family: "Rubik", sans-serif;
+}
+
+.display {
+  background: #2d2a37;
+  height: 186px;
+  margin: 54px auto 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.display::before{
+  content: "=";
+  color: #6b6b6b;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  font-size: 36px;
+}
+
+#calculator {
+  padding: 54px 32px 32px 32px;
+  width: 356px;
+  height: 566px;
+  border-radius: 48px;
+  background-color: var(--cor-backgroundCaluculator);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+  0px 188px 52px rgba(0, 0, 0, 0.01), 0px 120px 48px rgba(0, 0, 0, 0.04),
+  0px 68px 41px rgba(0, 0, 0, 0.15), 0px 30px 30px rgba(0, 0, 0, 0.26),
+  0px 8px 17px rgba(0, 0, 0, 0.29), inset 0px 6px 8px rgba(255, 255, 255, 0.1),
+  inset 0px -4px 5px rgba(0, 0, 0, 0.22);
+}
+
+#calculator .panel {
+  padding-left: 16px;
+  padding-right: 22px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 26px;
+}
+
+#calculator .panel .visualizaCalculo {
+  text-align: right;
+  font-size: 2rem;
+  color: var(--cor-fonte2);
+  height: 28px;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+}
+
+#calculator .panel .resultCalculo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+
+#calculator .panel .resultCalculo .resultado {
+  width: 100%;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  text-align: right;
+  font-size: 3.6rem;
+  color: var(--cor-fonte);
+}
+
+#calculator .btn {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 12px;
+  width: 100%;
+}
+
+#calculator .btn .button {
+  background: transparent;
+  border: 0;
+  outline: 0;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  box-shadow: var(--box-shadow);
+  color: var(--cor-fonte);
+  font-size: 2.4rem;
+  transition:1s all;
+}
+
+#calculator .btn .button:first-child{
+  color: var(--cor-btn1);
+}
+
+#calculator .btn .btnSecondary {
+  background: var(--cor-btn2);
+}
+
+#calculator .btn .btnSecondary:last-child {
+  background: linear-gradient(180deg,rgba(0, 0, 0, 0.15) 0%, rgba(255, 255, 255, 0.05) 100%),
+#7f45e2;
+}
