:white_check_mark: add style

--- a/cartao-embarque/style.css
+++ b/cartao-embarque/style.css
@@ -12,4 +12,56 @@
 
 body {
     font-size: 1.6rem;
+    font-family: 'Rubik', sans-serif;
+    letter-spacing: -0.02em;
+    background: linear-gradient(167.96deg, #8257E5 0%, #271A45 100%) no-repeat;
+
+    height: 100vh;
+    display: grid;
+    place-content: center;
+}
+
+h1,
+strong{
+    font-weight: 500;
+}
+
+h1{
+    font-size: 2rem;
+    line-height: 2.4rem;
+    color: white;
+    text-align: center;
+
+}
+
+#boarding-pass{
+    max-width: 32.7rem;
+    margin: auto;
+}
+
+#tiket{
+    margin-top: 2rem;
+}
+
+section{
+    background-color: white;
+    padding: 2.4rem 3.2rem;
+}
+
+.top{
+    border-radius: 2.4rem 2.4rem 0 0;
+}
+
+.bottom{
+    border-radius: 0 0 2.4rem 2.4rem;
+}
+
+footer{
+    font-size: 14px;
+    line-height: 24px;
+    color: white;
+    width: 27rem;
+    opacity: 0.64;
+    text-align: center;
+    margin: 2rem auto;
 }
