--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -47,11 +47,23 @@ body {
     text-align: center;
 }
 
+.bottom{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    margin-top: auto;
+}
+
+.bottom .item{
+    display: flex;
+    gap: 1rem;
+}
+
 .nps{
-    font-weight: 600;
+    /* font-weight: 600;
     font-size: 24px;
     line-height: 160%;
-    text-align: center;
+    text-align: center; */
 
     width: 29.6rem;
     gap: 3.2rem;
@@ -68,7 +80,7 @@ body {
 .nps .bottom {
     font-weight: 500;
     font-size: 1.4rem;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+
     gap: 1rem;
 }
