--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -27,14 +27,19 @@ body {
 
 #app{
     background-color: #292738;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* display: grid; */
+    grid-template-columns: 29.6rem max-content max-content;
+    grid-template-rows: max-content;
 
     column-gap: 3.2rem;
     row-gap: 5.9rem;
-    width: 100vw;
-    height: 100vh;
+    
+    width: fit-content;
+    min-width: 100vh;
+    height: fit-content;
+    min-height: 100vh;
     padding: 11.2rem 12.3rem;
+    place-content: center;
 }
 
 .box:nth-child(4){
@@ -65,7 +70,7 @@ body {
     line-height: 160%;
     text-align: center; */
 
-    width: 29.6rem;
+    /* width: 29.6rem; */
     gap: 3.2rem;
 }
 
@@ -78,8 +83,8 @@ body {
 }
 
 .nps .bottom {
-    font-weight: 500;
-    font-size: 1.4rem;
+    /* font-weight: 500;
+    font-size: 1.4rem; */
     /* display: flex; */
 
     gap: 1rem;
